# cosmos3_rl

./: .file_mapping.json  AGENTS.md  NOTICE  README.md  pyproject.toml
.agents/skills/cosmos3-codebase-nav/: SKILL.md
.agents/skills/cosmos3-paper-reference/: SKILL.md
.agents/skills/cosmos3-robolab-server-client/: SKILL.md
.agents/skills/cosmos3-volcengine-training/: SKILL.md
.claude/skills/cosmos3-codebase-nav/: SKILL.md
.codex/robolab/: cosmos3_run_variant.py  run_atomic_batch.py
.github/workflows/: 0-gpu-smoke-training.yml  1-gpu-regression-generator.yml  2-gpu-smoke-inference.yml  3-gpu-regression-reasoner.yml  docker-build.yml  gpu-tests.yml
cosmos_framework/callbacks/: compile_tokenizer.py  dit_image_sample.py  every_n_draw_sample.py  expert_heatmap.py  grad_clip.py  hf_export.py  iter_speed.py  learning_rate_logger.py  moe_specialization_callback.py  moe_stability_callback.py  norm_monitor.py  sequence_packing_padding.py  tokens_per_sec.py  training_stats.py
cosmos_framework/checkpoint/: dcp.py
cosmos_framework/configs/base/: config.py
cosmos_framework/configs/base/defaults/: callbacks.py  (+9 more)
cosmos_framework/configs/toml_config/: sft_config.py  sft_config_test.py  toml_config_helper.py
cosmos_framework/data/generator/: augmentor_provider.py  joint_dataloader.py  packing_iterable_dataset.py  recipe_database_api.py  sound_data_utils.py  utils.py  watchdog.py
cosmos_framework/data/reasoner/: local_dataset_utils.py  local_sft_dataset.py
cosmos_framework/inference/: action.py  args.py  args_test.py  dataset_samples.py  inference.py  inference_test.py  model.py  sound.py  sound_test.py  transfer.py  vision.py
cosmos_framework/inference/common/: args.py  checkpoints.py  config.py  init.py  public_model_config.py  public_model_config_test.py
cosmos_framework/model/generator/: __init__.py  hf_model.py  omni_mot_model.py  parallelize_vlm.py  vlm_model.py
cosmos_framework/scripts/: _convert_model_to_diffusers.py  _train.py  action_policy_server_libero.py  action_policy_server_robolab.py  action_policy_server_robolab_div.py  action_policy_server_robolab_keypoint_ik.py  action_policy_server_robolab_test.py  convert_model_to_diffusers.py  convert_model_to_vlm_safetensors.py  curator_to_sft_jsonl.py  curator_to_sft_jsonl_test.py  export_model.py  export_model_policy_test.py  train.py  upsample_prompts.py
cosmos_framework/scripts/action_policy_manifests/: droid_release.yaml
cosmos_framework/scripts/reasoner/: eval_videophy2.py  prepare_videophy2_from_hf.py
cosmos_framework/simulation/libero/: closed_loop_eval.py
cosmos_framework/utils/: config.py  config_helper.py  distributed.py  object_store.py
cosmos_framework/utils/easy_io/: transient_retry.py  transient_retry_test.py
cosmos_framework/utils/env_parsers/: cred_env_parser.py
cosmos_framework/utils/functional/: lr_scheduler.py
cosmos_framework/utils/generator/: data_utils.py  dtensor_helper.py  flash_attn.py  fused_adam.py  hf_attention_cosmos.py  lora.py  model_loader.py  model_weights_stats.py  monkey_patch.py  optimizer.py  parallelism.py  rand_state.py  torchcodec_video.py  video_preprocess.py
cosmos_framework/utils/reasoner/: compute_flops_qwen3vl.py  constant.py  create_position_ids.py  dcp_checkpointer.py  distributed.py  flop_calculator.py  fused_adam.py  model_wrapper.py  optimizer.py  planner.py  pretrained_models_downloader.py  video_preprocess.py
docs/: action_policy_droid_server.md  action_policy_libero_sft.md  action_policy_robomind_ur5_posttrain.md  berkeley_ur5_eef_retrain_todo.md  code_structure.md  custom_dataset.md  dataset_jsonl.md  faq.md  inference.md  setup.md  sft_config.md  training.md
examples/: README.md  _launch_paidsw_ur5_action.sh  _sft_launcher_common.sh  launch_local_h200_robomind_ur5_single.sh  launch_paidlc_topology_smoke.sh  launch_paidlc_ur5_single.sh  launch_paidsw_droid.sh  launch_paidsw_droid_mini7.sh  launch_paidsw_ur5_eef.sh  launch_paidsw_ur5_single.sh  launch_sft_action_policy_berkeley_ur5_eef.sh  launch_sft_action_policy_libero.sh  launch_sft_action_policy_libero_all.sh  launch_sft_action_policy_robolabsim_ur5_eef.sh  launch_sft_action_policy_robomind_ur5_dual.sh  launch_sft_action_policy_robomind_ur5_single.sh  launch_sft_action_policy_ur5_single_eef.sh  launch_sft_action_policy_ur5_single_joint.sh  launch_sft_llava_ov.sh  launch_sft_videophy2_nano.sh  launch_sft_videophy2_super.sh  launch_volcengine_berkeley_ur5_eef_h20.sh  launch_volcengine_robolabsim_ur5_eef_h20.sh  volc_bootstrap_cosmos3_train.sh
examples/integration/: README.md  net_level.py  trainer_level_inference.py  trainer_level_training.py
examples/toml/sft_config/: action_policy_berkeley_ur5_eef_repro.toml  action_policy_droid_repro.toml  action_policy_libero_all_repro.toml  action_policy_libero_repro.toml  action_policy_robolabsim_ur5_eef_repro.toml  action_policy_robomind_ur5_dual_repro.toml  action_policy_robomind_ur5_single_repro.toml  action_policy_ur5_single_eef_overfit.toml  action_policy_ur5_single_joint_overfit.toml  llava_ov.toml  llava_ov_mapstyle_dataloader.toml  videophy2_sft_nano.toml  videophy2_sft_super.toml
inputs/omni/: action_forward_dynamics_batch.jsonl  action_forward_dynamics_robot.json  action_inverse_dynamics_batch.jsonl  action_inverse_dynamics_robot.json  action_policy_batch.jsonl  action_policy_robot_t1.json  action_policy_robot_t2.json  bridge_20260501_0.json
inputs/reasoner/: reasoner_video.json
tests/: _reasoner_logits_probe.py  _stage_h100_inputs.sh  action_policy_regression_test.py  launch_regression_test.py  launch_sft_vision_nano_5iter.sh  nano_inference_smoke_test.py  nano_reasoner_inference_smoke_test.py  nano_training_smoke_test.py  vision_sft_nano_5iter.toml
tmps/: UR5E_POSTTRAIN_PLAN.md
tmps/ur5-single-robomind/: ROBOMIND1_UR5_SINGLE_POSTTRAIN_PLAN.md  hparams.yaml  hparams_b200_bs128.yaml
tmps/volc/: robolabsim_ur5_eef_full.volc.yaml  robolabsim_ur5_eef_smoke.volc.yaml
tools/: convert_robolabsim_lerobot_to_joints.py  convert_robomind2_ur_hdf5_to_lerobot.py  convert_robomind_hdf5_to_lerobot.py  eval_robomind_ur5_joint_windows.py
(+268 files in other folders)
